tests/reference/ast-program_without_line_02-87b589b.stderr
syntax error: Expected function, subroutine, procedure in program contains
 --> tests/errors/program_without_line_02.f90:3:1
  |
3 | print *, "OK"
  | ^^^^^^^^^^^^^ 
